FlightPath 5.x Changelog
========================

2018-02-13
  Implemented changes to group sorting functions (thanks to Logan Bluth) to let advising weights be sorted into
  negative numbers for groups.
  
  Fixed bug in fp_add_js and _add_css (dumb mistake on my part) which allowed the same scripts to be added
  multiple times, instead of just once.  Thanks to Logan Bluth for pointing that out.


2018-02-02
  Fixed bug in Blank Degrees module, where it would never load correctly.  Also added a hook for prereqs module (if installed) so it will not display
  errors relating to prereqs. (Thanks to Kim from Morningside).
  
  Fixed incorrect display of variable hours in Course Information popup (AdvisingScreen).
  
  Added setting to Configure School Setitngs, to hide the "May take up to..." text in a group list popup, instead showing
  the default course information of hrs.
  
  Added repeat hours display to course information popup.
  
  Added limit (so as not to show courses which can be repeated 999 times) to Course Search.


2018-01-31
  Fixed a bug in system.install where student_developmentals table did not have primary key
  configured correctly.
  

2018-01-18
  In order to make conditional_requirememnts module work more smoothly, added
  a global $student command to FlightPath::init() method.  This way when degree plans are loaded,
  and hook for hook_degree_load() is called, $student is available as a global variable.


2018-01-11
  Fixed a bug which was preventing a clean installation.
  
  Added a new hook for when degree plans load, as well as when groups load.


2017-12-5
  To fix an issue where groups with branches were not respecting the grade sort order, I added
  a new method to _GroupList: sort_best_grade_first_by_student_grades().  This helps sort branches
  based on grades the student has earned.


2017-11-30
  Fixed bug where courses with inf. repeats were not respecting minimum grades.
  